# AutomaticCorrector

./: .gitignore  AC_test.py  README.md  main.py  pyproject.toml
DataProcessor/: download_hf_data.py  prepare_for_kenlm.py
